finished blog and home section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
       type="text/css"
     />
+    <link rel="stylesheet" href="home.html">
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- css -->
 
@@ -19,7 +20,7 @@
       <nav
         class="bg-red-50 text-xs sm:text-lg h-20 flex justify-around items-center pb-4"
       >
-        <a id="blog"  class="btn font-semibold text-xs sm:text-lg bg-lime-300" href="blog.html">
+        <a id="blog"  class="btn font-semibold text-xs sm:text-lg bg-lime-300" href="home.html">
           Blog
         </a>
         <div class="flex font-bold gap-2">
@@ -29,7 +30,7 @@
         <div class="flex font-bold text-gray-600 gap-1">
           <img class="h-4 sm:h-7" src="./assets/coin.png" alt="" /><span
             id="main-balance"
-            >100000</span
+            >10000</span
           >
           BDT
         </div>
@@ -218,6 +219,11 @@
           </button>
         </div>
       </section>
+      <!-- history section -->
+      <section
+      id="history-section"
+      class="w-8/12 mx-auto flex flex-col gap-5 mt-5"
+    ></section>
     </main>
  
     <script src="js/script.js"></script>
