fisished history section

--- a/index.html
+++ b/index.html
@@ -219,12 +219,13 @@
           </button>
         </div>
       </section>
-      <!-- history section -->
-      <section
-      id="history-section"
-      class="w-8/12 mx-auto flex flex-col gap-5 mt-5"
-    ></section>
+      
+
     </main>
+    <section
+    id="history-section"
+    class="w-8/12 mx-auto flex flex-col gap-5 p-4 mt-5"
+  ></section>
  
     <script src="js/script.js"></script>
   </body>
