solve mistakes and ready for submitted

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     </main>
     <section
     id="history-section"
-    class="w-8/12 mx-auto flex flex-col gap-5 p-4 mt-5"
+    class="w-8/12 hidden mx-auto  gap-5 p-4 mt-5"
   ></section>
  
     <script src="js/script.js"></script>
